--- a/public/style.css
+++ b/public/style.css
@@ -79,3 +79,46 @@ a {
     color: #4CAF50;
     text-decoration: none;
 }
+
+#joystickContainer, #fireButton {
+    display: none;
+}
+
+@media only screen and (max-width: 767px) {
+    #joystickContainer, #fireButton {
+        display: initial;
+    }
+
+    #joystickContainer {
+        position: absolute;
+        left: 10px;
+        bottom: 10px;
+        width: 150px;
+        height: 150px;
+        background-color: rgba(0, 0, 0, 0.1);
+        border-radius: 50%;
+    }
+
+    #joystick {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        width: 50px;
+        height: 50px;
+        background-color: rgba(0, 0, 0, 0.5);
+        border-radius: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    #fireButton {
+        position: absolute;
+        right: 10px;
+        bottom: 10px;
+        width: 100px;
+        height: 100px;
+        background-color: rgba(255, 0, 0, 0.5);
+        border-radius: 50%;
+        font-size: 24px;
+        color: white;
+    }
+}
